--- a/ProjetoAcademia/ProjetoAcademia/Site.Master
+++ b/ProjetoAcademia/ProjetoAcademia/Site.Master
@@ -39,25 +39,42 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Academias</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">Sobre</a></li>
-                        <li><a runat="server" href="~/Contact">Contato</a></li>
+                    <a class="navbar-brand" href="#">Academias</a>
+                    </div>
+
+                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse">
+                    <ul class="nav navbar-nav">                        
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Academia<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="../../Views/Academias/AcademiaCadastro">Cadastrar</a></li>
+                                <li><a href="../../Views/Academias/AcademiaBusca">Buscar</a></li>                                
+                                <li class="divider"></li>
+                                <li><a href="../../Views/Academias/AcademiaLista">Listar</a></li>                                
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Aluno<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="../../Views/Alunos/AlunoCadastro">Cadastrar</a></li>
+                                <li><a href="../../Views/Alunos/AlunoBusca">Buscar</a></li>                                
+                                <li class="divider"></li>
+                                <li><a href="../../Views/Alunos/AlunoLista">Listar</a></li>                                
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
-        </div>
+         </nav>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
