--- a/ProjetoAcademia/ProjetoAcademia/Site.Master
+++ b/ProjetoAcademia/ProjetoAcademia/Site.Master
@@ -56,19 +56,19 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Academia<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="../../Views/Academias/AcademiaCadastro">Cadastrar</a></li>
-                                <li><a href="../../Views/Academias/AcademiaBusca">Buscar</a></li>                                
+                                <li><a href="../../Views/Academias/AcademiaCadastro">Cadastrar</a></li>                             
                                 <li class="divider"></li>
-                                <li><a href="../../Views/Academias/AcademiaLista">Listar</a></li>                                
+                                <li><a href="../../Views/Academias/AcademiaLista">Listar</a></li> 
+                                <li><a href="../../Views/Academias/AcademiaEditar">Editar</a></li>                               
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Aluno<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="../../Views/Alunos/AlunoCadastro">Cadastrar</a></li>
-                                <li><a href="../../Views/Alunos/AlunoBusca">Buscar</a></li>                                
+                                <li><a href="../../Views/Alunos/AlunoCadastro">Cadastrar</a></li>                             
                                 <li class="divider"></li>
-                                <li><a href="../../Views/Alunos/AlunoLista">Listar</a></li>                                
+                                <li><a href="../../Views/Alunos/AlunoLista">Listar</a></li>
+                                <li><a href="../../Views/Alunos/AlunoEditar">Editar</a></li>                                 
                             </ul>
                         </li>
                     </ul>
