Iniciando Projeto Final

--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Manage/Index.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Web.Models.IndexViewModel
+﻿@model ProjetoFinal_MVC.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
@@ -6,10 +6,6 @@
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
-<div class="alert alert-succes alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong>Warning!</strong> Better check yourself, you're not looking too good.
-</div>
 <div>
     <h4>Change your account settings</h4>
     <hr />
