--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/ConfirmEmail.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/ConfirmEmail.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Confirm Email";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Obrigado por confirmar seu E-mail. Please @Html.ActionLink("Clique aqui para Logar", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
