--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,21 +1,21 @@
 ﻿@model ProjetoFinal_MVC.Models.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registrar";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>Associate your @ViewBag.LoginProvider account.</h3>
+<h3>Associe sua @ViewBag.LoginProvider Conta.</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <h4>Association Form</h4>
+    <h4>Formulário de Associação</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
-        You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-        Please enter a user name for this site below and click the Register button to finish
-        logging in.
+        Você autenticou com sucesso com <strong>@ViewBag.LoginProvider</strong>.
+        Por favor,Digite um nome de usuário para este site abaixo e clique no botão Registrar para finalizar
+        efetuando login
     </p>
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-success" value="Registrar" />
         </div>
     </div>
 }
