--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/ExternalLoginFailure.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    ViewBag.Title = "Falha no login";
 }
 
 <hgroup>
     <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
+    <h3 class="text-danger">Login Mal sucedido com o serviço</h3>
 </hgroup>
