--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Por favor confira seu email para mudar a sua senha.
     </p>
 </div>
 	
