--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,16 +1,16 @@
 ﻿@model ProjetoFinal_MVC.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
+<h4>Use outro serviço para logar.</h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
         <div>
             <p>
-                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
-            </p>
+                Não há serviços de autenticação externos configurados. Veja <a href="http://go.microsoft.com/fwlink/?LinkId=403804"> este artigo </a>
+                Para obter detalhes sobre como configurar este aplicativo ASP.NET para suportar o logon via serviços externos.
+</p>
         </div>
     }
     else {
