--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Home/Index.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Home/Index.cshtml
@@ -3,29 +3,27 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Suplementos ao seu dispor</h1>
+    <p class="lead">Tudo em suplementação para auxiliar os seus Treinos e dietas do dia-a-dia com os melhores preços do mercado!</p>
+    <p><img src="http://saiuparaentrega.com/wp-content/uploads/2013/09/comprar-suplementos-importados.jpg" /></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Dicas de Suplementação</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+           Para obtér ajuda em suplementos que possam ajudar em seus objetivos e Ganhos em seus treinos/dieta
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://www.hipertrofia.org/blog/">Saiba mais &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Academia Conveniada</h2>
+        <p>Para conhecer uma opção de academia com preço Justo e Estrutura de primeira com todo o suporte necessário</p>
+        <p><a class="btn btn-default" href="https://www.smartfit.com.br/?gclid=CMSLl6TV29QCFcgIkQodm78OVA">Saiba mais &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Site Parceiro</h2>
+        <p>Se procura produtos que possam auxiliar seus treinos como Roupas e acessórios para sua Atividade física</p>
+        <p><a class="btn btn-default" href="http://www.decathlon.com.br/">Saiba mais &raquo;</a></p>
     </div>
 </div>
