--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Manage/ManageLogins.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Manage/ManageLogins.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoFinal_MVC.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
-    ViewBag.Title = "Manage your external logins";
+    ViewBag.Title = "Gerencie seus logins externos";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -12,8 +12,8 @@
     if (loginProviders.Count() == 0) {
         <div>
             <p>
-                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
+                Não há serviços de autenticação externos configurados. Veja <a href="http://go.microsoft.com/fwlink/?LinkId=403804"> este artigo </a>
+                Para obter detalhes sobre como configurar este aplicativo ASP.NET para suportar o logon via serviços externos.
             </p>
         </div>
     }
@@ -21,7 +21,7 @@
     {
         if (Model.CurrentLogins.Count > 0)
         {
-            <h4>Registered Logins</h4>
+            <h4>Logins registrados</h4>
             <table class="table">
                 <tbody>
                     @foreach (var account in Model.CurrentLogins)
