finalizando o projeto final

--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/Register.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Account/Register.cshtml
@@ -11,6 +11,24 @@
     <h4>Criar uma nova Conta</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+    if (ViewBag.Menssagem != null)
+    {
+        <div class="form-group">
+            <div class="col-md-10">@ViewBag.Menssagem</div>
+        </div>
+    }
+    <div class="form-group">
+        @Html.LabelFor(m => m.Nome, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Endereco, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Endereco, new { @class = "form-control" })
+        </div>
+    </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -29,6 +47,15 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+    <!--Selecione o Tipo de Perfil para o usuário-->
+    <div class="form-group">
+        @Html.Label("Selecione o Tipo de Perfil do Usuário", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownList("Name", (IEnumerable<SelectListItem>)ViewBag.Name, new { @class = "form-control" })
+</div>
+    </div>
+  <!--termina aqui-->
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-success" value="Registrar" />
