--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Home/Index.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <h1>Suplementos ao seu dispor</h1>
     <p class="lead">Tudo em suplementação para auxiliar os seus Treinos e dietas do dia-a-dia com os melhores preços do mercado!</p>
     <p><img src="http://saiuparaentrega.com/wp-content/uploads/2013/09/comprar-suplementos-importados.jpg" /></p>
+    <p><img src=http://i1.wp.com/dietaflexivel.com/wp-content/uploads/2016/10/Suplementos-para-ganhar-massa-muscular.jpg?w =537" /></p>
 </div>
 
 <div class="row">
