--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Shared/_Layout.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Shared/_Layout.cshtml
@@ -17,28 +17,46 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("MVP Suplementos", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MVP Suplementos - Pagina Inicial", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Marcas <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Criar Perfil <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Cadastro", "Create", "Marcas")@*<a href="#">Action</a>*@</li>
-                            <li>@Html.ActionLink("Listagem", "Index", "Marcas")@*<a href="#">Another action</a>*@</li>
+                            <li>@Html.ActionLink("Criar Novo Perfil", "Index", "Role")</li>
+                            </ul>
+                        </li>
+                       
+                       
+                            <li class="dropdown">
+                            @if (User.Identity.IsAuthenticated)
+                                        {
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Marcas <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                  
+                                    <li>@Html.ActionLink("Cadastro", "Create", "Marcas")@*<a href="#">Action</a>*@</li>
+                                    <li>@Html.ActionLink("Listagem", "Index", "Marcas")@*<a href="#">Another action</a>*@</li>
+                                   
+                                </ul>
+                                         }
+                            </li>
+                            <li class="dropdown">
+                            @if (User.Identity.IsAuthenticated)
+                                        {
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Suplementos <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                   
+                                    <li>@Html.ActionLink("Cadastro", "Create", "Suplementos")@*<a href="#">Action</a>*@</li>
+                                    <li>@Html.ActionLink("Listagem", "Index", "Suplementos")@*<a href="#">Another action</a>*@</li>
+                                    
+                                </ul>
+                                        }
+                            </li>
                         </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Suplementos <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Cadastro", "Create", "Suplementos")@*<a href="#">Action</a>*@</li>
-                            <li>@Html.ActionLink("Listagem", "Index", "Suplementos")@*<a href="#">Another action</a>*@</li>
-                        </ul>
-                    </li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+                    @Html.Partial("_LoginPartial")
+                </div>
             </div>
-        </div>
     </div>
     <div class="container body-content">
         @RenderBody()
