--- a/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Shared/_Layout.cshtml
+++ b/ProjetoFinal_MVC/ProjetoFinal_MVC/Views/Shared/_Layout.cshtml
@@ -25,38 +25,41 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Criar Perfil <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Criar Novo Perfil", "Index", "Role")</li>
-                            </ul>
-                        </li>
-                       
-                       
-                            <li class="dropdown">
-                            @if (User.Identity.IsAuthenticated)
-                                        {
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Marcas <span class="caret"></span></a>
+                        </ul>
+                    </li>
+
+
+                    <li class="dropdown">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Marcas <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                  
-                                    <li>@Html.ActionLink("Cadastro", "Create", "Marcas")@*<a href="#">Action</a>*@</li>
+
+                                    @if (User.IsInRole("Admin"))
+                                    {
+                                        <li>@Html.ActionLink("Cadastro", "Create", "Marcas")@*<a href="#">Action</a>*@</li>
+                                    }
                                     <li>@Html.ActionLink("Listagem", "Index", "Marcas")@*<a href="#">Another action</a>*@</li>
-                                   
+
                                 </ul>
-                                         }
-                            </li>
-                            <li class="dropdown">
-                            @if (User.Identity.IsAuthenticated)
-                                        {
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Suplementos <span class="caret"></span></a>
+                        }
+                    </li>
+                    <li class="dropdown">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Suplementos <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                   
+
                                     <li>@Html.ActionLink("Cadastro", "Create", "Suplementos")@*<a href="#">Action</a>*@</li>
                                     <li>@Html.ActionLink("Listagem", "Index", "Suplementos")@*<a href="#">Another action</a>*@</li>
-                                    
+
                                 </ul>
-                                        }
-                            </li>
-                        </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
+                        }
+                    </li>
+                </ul>
+                @Html.Partial("_LoginPartial")
             </div>
+        </div>
     </div>
     <div class="container body-content">
         @RenderBody()
